<resources>
    <string name="app_name">Memo</string>
    <string name="title_hint">제목을 입력하세요</string>
    <string name="input_hint">메모를 입력하세요</string>
    <string name="from_gallery">사진 첨부</string>
    <string name="new_picture">사진 찍어서 첨부</string>
    <string name="from_link">링크로 첨부</string>
    <string name="save">저장</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="ic_attach">사진 첨부</string>
    <string name="url_hint">첨부하고 싶은 이미지 URL을 입력하세요</string>
</resources>
