<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MemoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/album_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/from_gallery" />

        <Button
            android:id="@+id/new_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_picture" />

        <Button
            android:id="@+id/link_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/from_link" />

    </LinearLayout>
    <ImageView
        android:id="@+id/image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/memo_title"
        android:hint="@string/title_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null" />
    <EditText
        android:id="@+id/memo_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/input_hint"
        android:gravity="top"
        android:inputType="textMultiLine" />


</LinearLayout>